--- a/index.html
+++ b/index.html
@@ -34,7 +34,25 @@
   <link rel="apple-touch-icon" sizes="180x180" href="assets/images/apple-touch-icon-180x180.png">
   <link rel="icon" type="image/png" sizes="192x192" href="assets/images/android-chrome-192x192.png">
   <link rel="icon" type="image/png" sizes="512x512" href="assets/images/android-chrome-512x512.png">
-  
+
+  <meta name="description" content="Hide and reveal secret images inside other images using seeded LSB steganography. Create and solve visual puzzles for ARGs.">
+
+  <!-- Open Graph -->
+  <meta property="og:title" content="Ghostmark | NQR Labs">
+  <meta property="og:description" content="Hide and reveal secret images inside other images using seeded LSB steganography. Create and solve visual puzzles for ARGs.">
+  <meta property="og:image" content="https://nqrlabs.com/Ghostmark/assets/images/logo.png">
+  <meta property="og:url" content="https://nqrlabs.com/Ghostmark/">
+  <meta property="og:type" content="website">
+
+  <!-- Twitter Card -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Ghostmark | NQR Labs">
+  <meta name="twitter:description" content="Hide and reveal secret images inside other images using seeded LSB steganography. Create and solve visual puzzles for ARGs.">
+  <meta name="twitter:image" content="https://nqrlabs.com/Ghostmark/assets/images/logo.png">
+
+  <!-- Canonical URL -->
+  <link rel="canonical" href="https://nqrlabs.com/Ghostmark/">
+
 <style>
   :root {
     --bg: #0c1020;
